--- a/widgets/right-rail-online-event-w-form/index.htm
+++ b/widgets/right-rail-online-event-w-form/index.htm
@@ -1,35 +1,32 @@
+<div class="visible-xs visible-sm text-md">
+	<img style="width: 100%;" alt="" src="/images/asset/event-online.jpg">
+	<div class="event-details-widget bg-light-grey">
+		<div class="container-fluid">
+			<div class="col-xs-12 event-detail">
+				<div>
+					<div class="date-widget text-center event-in-person">
+						<div class="header">Online</div>
+						<div class="date-body">
+							<h3 class="month p-0 m-0">Jun</h3>
+							<h3 class="day p-0 m-0">8</h3>
+						</div>
+					</div>
+					<div class="details-list">
+						<ul class="list-unstyled m-0">
+							<li><strong>Date: </strong>June 8, 2015</li>
+							<li><strong>Time: </strong>8:00 AM &ndash; 5:00 PM CD</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="container text-md">
 	<div class="row mt-20">
 		<div class="col-xs-12 col-sm-12 col-md-7">
 			<a href="#right-rail-form">
 				<img src="../image.php?w=750&h=232&c=ffff00&t=750x232" class="img-responsive">
-
-				<div class="event-details-widget bg-light-grey visible-xs visible-sm hidden-md">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="date-widget text-center pad-0 event-online">
-									<div class="header">Online</div>
-									<div class="date-body">
-										<h3 class="month p-0 m-0">June</h3>
-
-										<h3 class="day p-0 m-0">8</h3>
-									</div>
-								</div>
-								<div class="details-list ml-10">
-									<ul class="list-unstyled m-0">
-										<li><strong>Date: </strong>June 8, 2015</li>
-										<li><strong>Time: </strong>8:00 AM &ndash; 5:00 PM CD</li>
-										<li><strong>Duration: </strong>60 Minutes</li>
-										<li><strong>Location: </strong>Diana's house</li>
-										<li><strong>Event: </strong>Online</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- */ end event details content -->
-					</div>
-				</div>
 			</a>
 
 			<p class="mt-20">Arm yourself with the tools to make intelligent, data-driven decisions for VM optimization.</p>
