--- a/widgets/right-rail-online-event-w-form/on-demand.htm
+++ b/widgets/right-rail-online-event-w-form/on-demand.htm
@@ -1,36 +1,32 @@
+<div class="visible-xs visible-sm text-md">
+	<img style="width: 100%;" alt="" src="/images/asset/event-online.jpg">
+	<div class="event-details-widget bg-light-grey">
+		<div class="container-fluid">
+			<div class="col-xs-12 event-detail">
+				<div>
+					<div class="date-widget text-center event-on-demand">
+						<div class="header">On Demand</div>
+						<div class="date-body">
+							<span class="glyphicon glyphicon-play"></span>
+						</div>
+					</div>
+					<div class="details-list">
+						<ul class="list-unstyled m-0">
+							<li><span><strong>Date: </strong></span><span>June 8, 2015</span></li>
+							<li><span><strong>Time: </strong></span><span>8:00 AM &ndash; 5:00 PM CD</span></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="container text-md">
 	<div class="row mt-20">
 		<div class="col-xs-12 col-sm-12 col-md-7">
 			<a href="#right-rail-form">
 				<img src="../image.php?w=750&h=232&c=ffff00&t=750x232" class="img-responsive">
-
-				<div class="event-details-widget bg-light-grey visible-xs visible-sm hidden-md">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-xs-12 event-detail-container">
-								<div class="event-detail">
-									<div>
-										<div class="date-widget text-center pad-0 event-on-demand">
-											<div class="header">On Demand</div>
-											<div class="date-body">
-												<span class="glyphicon glyphicon-play"></span>
-											</div>
-										</div>
-										<div class="details-list">
-											<ul class="list-unstyled">
-												<li><span><strong>Date: </strong></span><span>June 8, 2015</span></li>
-												<li><span><strong>Time: </strong></span><span>8:00 AM &ndash; 5:00 PM CD</span></li>
-												<li><span><strong>Duration: </strong></span><span>60 Minutes</span></li>
-												<li><span><strong>Location: </strong></span><span>Diana's house, Rancho Santa Margarita</span></li>
-												<li><span><strong>Event: </strong></span><span>Online</span></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div><!-- */ end event details content -->
-					</div>
-				</div>
 			</a>
 
 			<p class="mt-20">Arm yourself with the tools to make intelligent, data-driven decisions for VM optimization.</p>
