--- a/widgets/right-rail-online-event-w-form/thank-you.htm
+++ b/widgets/right-rail-online-event-w-form/thank-you.htm
@@ -1,3 +1,28 @@
+<div class="visible-xs visible-sm text-md">
+	<img style="width: 100%;" alt="" src="/images/asset/event-online.jpg">
+	<div class="event-details-widget bg-light-grey">
+		<div class="container-fluid">
+			<div class="col-xs-12 event-detail">
+				<div>
+					<div class="date-widget text-center event-online">
+						<div class="header">Online</div>
+						<div class="date-body">
+							<h3 class="month p-0 m-0">June.</h3>
+							<h3 class="day p-0 m-0">8</h3>
+						</div>
+					</div>
+					<div class="details-list">
+						<ul class="list-unstyled m-0">
+							<li><span><strong>Date: </strong></span><span>June 8, 2015</span></li>
+							<li><span><strong>Time: </strong></span><span>8:00 AM &ndash; 5:00 PM CD</span></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="container text-md">
 	<div class="row mt-20">
 		<div class="col-xs-12 col-md-7">
@@ -6,33 +31,40 @@
 			<p class="mt-20">Your event details will be mailed to you shortly.</p>
 		</div>
 		<div class="col-xs-12 col-md-5">
-			<div class="event-details-widget border-grey bg-light-grey">
+			<div class="event-details-widget border-grey bg-light-grey hidden-sm hidden-xs">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-xs-12">
 							<h3 class="mb-15 mt-0">Event Details</h3>
 						</div>
-					</div><!-- */ end of events heading-->
+					</div>
+					<!-- */ end of events heading-->
 					<div class="row">
-						<div class="col-xs-12">
-							<div class="date-widget text-center pad-0 event-online">
-								<div class="header">Online</div>
-								<div class="date-body">
-									<h3 class="month p-0 m-0">June</h3>
-									<h3 class="day p-0 m-0">8</h3>
+						<div class="col-xs-12 event-detail-container">
+							<div class="event-detail">
+								<div>
+									<div class="date-widget text-center pad-0 event-online">
+										<div class="header">Online</div>
+										<div class="date-body">
+											<h3 class="month p-0 m-0">June</h3>
+
+											<h3 class="day p-0 m-0">8</h3>
+										</div>
+									</div>
+									<div class="details-list">
+										<ul class="list-unstyled">
+											<li><strong>Date: </strong>June 8, 2015</li>
+											<li><strong>Time: </strong>8:00 AM &ndash; 5:00 PM CD</li>
+											<li><strong>Duration: </strong>60 Minutes</li>
+											<li><strong>Location: </strong>Diana's house</li>
+											<li><strong>Event: </strong>Online</li>
+										</ul>
+									</div>
 								</div>
 							</div>
-							<div class="details-list ml-10">
-								<ul class="list-unstyled m-0">
-									<li><strong>Date: </strong>June 8, 2015</li>
-									<li><strong>Time: </strong>8:00 AM &ndash; 5:00 PM CD</li>
-									<li><strong>Duration: </strong>60 Minutes</li>
-									<li><strong>Location: </strong>Diana's house</li>
-									<li><strong>Event: </strong>Online</li>
-								</ul>
-							</div>
 						</div>
-					</div><!-- */ end event details content -->
+					</div>
+					<!-- */ end event details content -->
 					<div class="row">
 						<div class="col-xs-12 text-center-xs">
 							<div class="mt-20 social-media-toolbar">
