--- a/widgets/organisms/list-to-button-dropdown/index.html
+++ b/widgets/organisms/list-to-button-dropdown/index.html
@@ -1,4 +1,4 @@
-<!-- Display button dropdown only on mobile. Reset will display as a list. Variation #1 -->
+<!-- Display button dropdown only on mobile. Reset will display as a list. -->
 <div class="btn-group btn-block">
 	<a aria-expanded="false" class="btn btn-default btn-block dropdown-toggle visible-xs" data-toggle="dropdown">Legal Resources<i class="caret ml-10"></i></a>
 	<ul class="dropdown-menu-xs list-unstyled text-md">
