Re-arranging "pages" folder to group them by domain.
Change-Id: Ice6e8d997b5e05df3d480506ad9aeb668b6bc71a

--- a/pages/dsg/SSO/create-new-password.html
+++ b/pages/dsg/SSO/create-new-password.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sign In</title>
+  <title>Create New Password</title>
 
   <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/sso.min.css">
 
   <!--[if IE]>
-  <link rel="stylesheet" href="/static/css/bootstrap-ie.css">
-  <![endif]-->
+	<link rel="stylesheet" href="/static/css/bootstrap-ie.css">
+	<![endif]-->
 </head>
 <body>
 
@@ -883,39 +883,32 @@
       </nav>
     </header>
     <!-- header ends here -->
-      <div class="container login" >
+      <div class="container sso create-new-password" >
           <div class="row">
-              <h1>Dell Software Sign In</h1>
-              <form id="sso" class="label-top">
+              <h1>Create New Password</h1>
+              <form id="createnewpwd" class="label-inline">
                   <div class="form-group">
-                      <label for="txtuseremail"> Email Address</label>
-                      <input type="email" class="form-control" name="txtuseremail" id="txtuseremail" placeholder="">
+                      <label for="txttemporarypwd">Business Email</label>
+                      <div id="lblemailaccount">diana.spencer@software.dell.com</div>
                   </div>
                   <div class="form-group">
-                      <label for="txtpassword">Password</label>
-                      <input type="password" class="form-control" name="txtpassword" id="txtpassword" placeholder="">
+                      <label for="txttemporarypwd">Temporary Password</label>
+                      <input type="password" class="form-control" name="txttemporarypwd" id="txttemporarypwd" placeholder="">
+                      Enter the temporary password emailed to you.
                   </div>
                   <div class="form-group">
-                      <div></div>
-                      <div class="checkbox pad-0">
-                          <a href="#" id="lnkForgotPwd">Forgot your password?</a>
-                          <label>
-                              <input type="checkbox" id="RememberMe" name="RememberMe">Remember me
-                          </label>
-                      </div>
+                      <label for="txtnewpwd">New Password</label>
+                      <input type="password" class="form-control" name="txtnewpwd" id="txtnewpwd" placeholder="">
                   </div>
                   <div class="form-group">
-                      <div></div>
-                      <div>
-                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueUpdatePwd">Sign In</button>
-                      </div>
+                      <label for="txtconfirmpwd">Confirm New Password</label>
+                      <input type="password" class="form-control" name="txtconfirmpwd" id="txtconfirmpwd" placeholder="">
+                      New Password must contain: at least 8 characters, one letter and one number.
                   </div>
-                  <div class="form-group">
+                  <div class="form-footer">
                       <div></div>
                       <div>
-                          <a href="/account/createaccount/" class="flyout-btn">
-                          <button type="submit" class="btn btn-default btn-block" id="btnContinueUpdatePwd">Creat Account</button>
-                          </a>
+                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueCreateNewPwd">Create Password</button>
                       </div>
                   </div>
               </form>
