--- a/pages/dsg/SSO/edit-password.html
+++ b/pages/dsg/SSO/edit-password.html
@@ -4,14 +4,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reset Password</title>
+  <title>Edit Password</title>
 
   <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/sso.min.css">
 
   <!--[if IE]>
-  <link rel="stylesheet" href="/static/css/bootstrap-ie.css">
-  <![endif]-->
+	<link rel="stylesheet" href="/static/css/bootstrap-ie.css">
+	<![endif]-->
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
 </head>
 <body>
 
@@ -883,23 +890,31 @@
       </nav>
     </header>
     <!-- header ends here -->
-      <div class="container sso reset-password" >
+      <div class="container sso edit-password" >
           <div class="row">
-              <h1>Reset Password</h1>
-              <p>Enter your business email. A temporary password will be email to you.</p>
-              <form id="forgot-password" class="label-inline">
+              <h1>Edit Password</h1>
+              <form id="updatepwd" class="label-inline">
                   <div class="form-group">
-                      <label for="txtEmailForgotEmail">Business Email</label>
-                      <input type="email" class="form-control" name="txtEmailForgotEmail" id="txtEmailForgotEmail" placeholder="">
+                      <label for="lblupdatepwdemail">Business Email</label>
+                      <div id="lblupdatepwdemail">diana.spencer@software.dell.com</div>
                   </div>
                   <div class="form-group">
-                      <label for="txtConfirmEmailForgotEmail">Confirm Business Email</label>
-                      <input type="text" class="form-control" name="txtConfirmEmailForgotEmail" id="txtConfirmEmailForgotEmail" placeholder="">
+                      <label for="chpwdPwd">Current Password</label>
+                      <input type="password" class="form-control" name="chpwdPwd" id="chpwdPwd" placeholder="">
+                  </div>
+                  <div class="form-group">
+                      <label for="chpwdNewPwd">New Password</label>
+                      <input type="password" class="form-control" name="chpwdNewPwd" id="chpwdNewPwd" placeholder="">
+                  </div>
+                  <div class="form-group">
+                      <label for="chpwdConfirmNewPwd">Confirm New Password</label>
+                      <input type="password" class="form-control" name="chpwdConfirmNewPwd" id="chpwdConfirmNewPwd" placeholder="">
+                      New Password must contain: at least 8 characters, one letter and one number.
                   </div>
                   <div class="form-footer">
                       <div></div>
                       <div>
-                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueForgotPwd">Reset Password</button>
+                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueUpdatePwd">Update Password</button>
                       </div>
                   </div>
               </form>
