--- a/pages/dsg/SSO/edit-business-email.html
+++ b/pages/dsg/SSO/edit-business-email.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Create New Password</title>
+  <title>Edit Business Emails</title>
 
   <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/sso.min.css">
 
   <!--[if IE]>
-  <link rel="stylesheet" href="/static/css/bootstrap-ie.css">
-  <![endif]-->
+	<link rel="stylesheet" href="/static/css/bootstrap-ie.css">
+	<![endif]-->
 </head>
 <body>
 
@@ -883,32 +883,30 @@
       </nav>
     </header>
     <!-- header ends here -->
-      <div class="container sso create-new-password" >
+      <div class="container sso edit-email" >
           <div class="row">
-              <h1>Create New Password</h1>
-              <form id="createnewpwd" class="label-inline">
+              <h1>Edit Business Email</h1>
+              <form id="updateemail" class="label-inline">
                   <div class="form-group">
-                      <label for="txttemporarypwd">Business Email</label>
-                      <div id="lblemailaccount">diana.spencer@software.dell.com</div>
+                      <label for="lblupdateemailemail">Current Email</label>
+                      <div id="lblupdateemailemail">diana.spencer@software.dell.com</div>
                   </div>
                   <div class="form-group">
-                      <label for="txttemporarypwd">Temporary Password</label>
-                      <input type="password" class="form-control" name="txttemporarypwd" id="txttemporarypwd" placeholder="">
-                      Enter the temporary password emailed to you.
+                      <label for="updateemailnewemail">Business Email</label>
+                      <input type="text" class="form-control" name="updateemailnewemail" id="updateemailnewemail" placeholder="">
                   </div>
                   <div class="form-group">
-                      <label for="txtnewpwd">New Password</label>
-                      <input type="password" class="form-control" name="txtnewpwd" id="txtnewpwd" placeholder="">
+                      <label for="txtconfirmemail">Confirm Business Email</label>
+                      <input type="text" class="form-control" name="txtconfirmemail" id="txtconfirmemail" placeholder="">
                   </div>
                   <div class="form-group">
-                      <label for="txtconfirmpwd">Confirm New Password</label>
-                      <input type="password" class="form-control" name="txtconfirmpwd" id="txtconfirmpwd" placeholder="">
-                      New Password must contain: at least 8 characters, one letter and one number.
+                      <label for="updateemailpwd">Password</label>
+                      <input type="password" class="form-control" name="updateemailpwd" id="updateemailpwd" placeholder="">
                   </div>
                   <div class="form-footer">
                       <div></div>
                       <div>
-                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueCreateNewPwd">Create Password</button>
+                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueUpdateEmail">Update Email</button>
                       </div>
                   </div>
               </form>
