--- a/pages/dsg/SSO/reset-password.html
+++ b/pages/dsg/SSO/reset-password.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Edit Business Emails</title>
+  <title>Reset Password</title>
 
   <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/sso.min.css">
 
   <!--[if IE]>
-  <link rel="stylesheet" href="/static/css/bootstrap-ie.css">
-  <![endif]-->
+	<link rel="stylesheet" href="/static/css/bootstrap-ie.css">
+	<![endif]-->
 </head>
 <body>
 
@@ -883,30 +883,23 @@
       </nav>
     </header>
     <!-- header ends here -->
-      <div class="container sso edit-email" >
+      <div class="container sso reset-password" >
           <div class="row">
-              <h1>Edit Business Email</h1>
-              <form id="updateemail" class="label-inline">
+              <h1>Reset Password</h1>
+              <p>Enter your business email. A temporary password will be email to you.</p>
+              <form id="forgot-password" class="label-inline">
                   <div class="form-group">
-                      <label for="lblupdateemailemail">Current Email</label>
-                      <div id="lblupdateemailemail">diana.spencer@software.dell.com</div>
+                      <label for="txtEmailForgotEmail">Business Email</label>
+                      <input type="email" class="form-control" name="txtEmailForgotEmail" id="txtEmailForgotEmail" placeholder="">
                   </div>
                   <div class="form-group">
-                      <label for="updateemailnewemail">Business Email</label>
-                      <input type="text" class="form-control" name="updateemailnewemail" id="updateemailnewemail" placeholder="">
-                  </div>
-                  <div class="form-group">
-                      <label for="txtconfirmemail">Confirm Business Email</label>
-                      <input type="text" class="form-control" name="txtconfirmemail" id="txtconfirmemail" placeholder="">
-                  </div>
-                  <div class="form-group">
-                      <label for="updateemailpwd">Password</label>
-                      <input type="password" class="form-control" name="updateemailpwd" id="updateemailpwd" placeholder="">
+                      <label for="txtConfirmEmailForgotEmail">Confirm Business Email</label>
+                      <input type="text" class="form-control" name="txtConfirmEmailForgotEmail" id="txtConfirmEmailForgotEmail" placeholder="">
                   </div>
                   <div class="form-footer">
                       <div></div>
                       <div>
-                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueUpdateEmail">Update Email</button>
+                          <button type="submit" class="btn btn-primary btn-block" id="btnContinueForgotPwd">Reset Password</button>
                       </div>
                   </div>
               </form>
