--- a/widgets/organisms/4-column-filmstrip-carousel/index.htm
+++ b/widgets/organisms/4-column-filmstrip-carousel/index.htm
@@ -103,113 +103,6 @@
 				<!-- Use this structure if image height is > 247 -->
 				<a href="/solutions/endpoint-management/">
 					<div class="img-crop img-border">
-						<p class="img-header-overlay bg-blue Technical Brief">Technical Brief</p>
-						<img class="img-responsive center-block" alt="image alternative text"
-						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">PDF</h5></a>
-
-					<div class="description dotdotdot" data-max-line="5">
-						<p>ActiveRoles Server provides out-of-the-box user and group account management, strictly enforced
-							administrator-based role security, day-to-day identity administration and built-in auditing and
-							reporting for Windows-centric environments.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<!-- PDF -->
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<!-- Use this structure if image height is > 247 -->
-				<a href="/solutions/endpoint-management/">
-					<div class="img-crop img-border">
-						<p class="img-header-overlay bg-blue infographic">Infographic</p>
-						<img class="img-responsive center-block" alt="image alternative text"
-						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">PDF</h5></a>
-
-					<div class="description dotdotdot" data-max-line="5">
-						<p>ActiveRoles Server provides out-of-the-box user and group account management, strictly enforced
-							administrator-based role security, day-to-day identity administration and built-in auditing and
-							reporting for Windows-centric environments.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<!-- Use this structure if image height is > 247 -->
-				<a href="/solutions/endpoint-management/">
-					<div class="img-crop img-border">
-						<p class="img-header-overlay bg-blue whitepaper">White Paper</p>
-						<img class="img-responsive center-block" alt="image alternative text"
-						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">PDF</h5></a>
-
-					<div class="description dotdotdot" data-max-line="5">
-						<p>ActiveRoles Server provides out-of-the-box user and group account management, strictly enforced
-							administrator-based role security, day-to-day identity administration and built-in auditing and
-							reporting for Windows-centric environments.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<!-- Use this structure if image height is > 247 -->
-				<a href="/solutions/endpoint-management/">
-					<div class="img-crop img-border">
-						<p class="img-header-overlay bg-blue datasheet">Datasheet</p>
-						<img class="img-responsive center-block" alt="image alternative text"
-						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">PDF</h5></a>
-
-					<div class="description dotdotdot" data-max-line="5">
-						<p>ActiveRoles Server provides out-of-the-box user and group account management, strictly enforced
-							administrator-based role security, day-to-day identity administration and built-in auditing and
-							reporting for Windows-centric environments.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<!-- Use this structure if image height is > 247 -->
-				<a href="/solutions/endpoint-management/">
-					<div class="img-crop img-border">
-						<p class="img-header-overlay casestudy">Case Study</p>
-						<img class="img-responsive center-block" alt="image alternative text"
-						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">PDF</h5></a>
-
-					<div class="description dotdotdot" data-max-line="5">
-						<p>ActiveRoles Server provides out-of-the-box user and group account management, strictly enforced
-							administrator-based role security, day-to-day identity administration and built-in auditing and
-							reporting for Windows-centric environments.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<!-- Use this structure if image height is > 247 -->
-				<a href="/solutions/endpoint-management/">
-					<div class="img-crop img-border">
-						<p class="img-header-overlay bg-blue ebook">eBook</p>
 						<img class="img-responsive center-block" alt="image alternative text"
 						     src="http://software.dell.com/images/samples/img-sample-220x280.jpg">
 					</div>
@@ -247,50 +140,12 @@
 					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
 				</div>
 			</div>
-
 			<!-- Text Overlay -->
 			<div class="col-xs-12 col-sm-4 col-md-3">
 				<a href="#" class="no-underline">
 					<div class="img-border img-crop">
-						<p class="img-header-overlay  ondemand">On Demand Webcast</p>
-						<img src="/images/asset/carousel-event-on-demand.jpg" alt="On-Demand Webcast"
-						     class="img-responsive">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">Text Overlay</h5></a>
-
-					<div class="description text-left">
-						<p>Streamline Active Directory security and Group Policy Management.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<a href="#" class="no-underline">
-					<div class="img-border img-crop">
-						<p class="img-header-overlay  online-event">Online Event</p>
-						<img src="/images/asset/carousel-event-online.jpg" alt="On-Demand Webcast"
-						     class="img-responsive">
-					</div>
-				</a>
-
-				<div class="mt-30 text-md">
-					<a href="#"><h5 class="text-md">Text Overlay</h5></a>
-
-					<div class="description text-left">
-						<p>Streamline Active Directory security and Group Policy Management.</p>
-					</div>
-					<p class="hidden-xs"><a href="#">Lorem ipsum</a></p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-3">
-				<a href="#" class="no-underline">
-					<div class="img-border img-crop">
-						<p class="img-header-overlay  in-person">In Person Event </p>
-						<img src="/images/asset/carousel-event-in-person.jpg" alt="On-Demand Webcast"
-						     class="img-responsive">
+						<p class="img-header-overlay bg-orange">On Demand Webcast</p>
+						<img src="http://software.dell.com/images/samples/img-sample-328x204.jpg" alt="On-Demand Webcast" class="img-responsive">
 					</div>
 				</a>
 
